Implemented autogeneration of N and n variant of \subfiglist_seq_set_from_tl

--- a/subfiglist.sty
+++ b/subfiglist.sty
@@ -625,34 +625,27 @@
 \cs_generate_variant:Nn \subfiglist_tl_set_from_seq:NN { cN }
 \cs_generate_variant:Nn \subfiglist_tl_set_from_seq:NN { Nc }
 
-\cs_new:Npn \subfiglist_seq_set_from_tl:Nn #1 #2
-%
-% #1: Sequence to be set
-% #2: Token list
-%
+\prop_clear:N \subfiglist_tmp_prop
+\prop_put:Nnn \subfiglist_tmp_prop { N } { #2 }
+\prop_put:Nnn \subfiglist_tmp_prop { n } { { #2 } }
+
+\prop_map_inline:Nn \subfiglist_tmp_prop
 {
-  \seq_clear:N #1
-  \tl_map_inline:nn { #2 }
+  \cs_new:cpn { subfiglist_seq_set_from_tl:N #1 } ##1 ##2
+  %
+  % #1: Sequence to be set
+  % #2: Token list
+  %
   {
-    \seq_put_right:Nn #1 { ##1 }
+    \seq_clear:N ##1
+    \subfiglist_use:c { tl_map_inline: #1 n } #2 % Inserts #2 or { #2 }
+    {
+      \seq_put_right:Nn ##1 { ####1 }
+    }
   }
 }
 
 \cs_generate_variant:Nn \subfiglist_seq_set_from_tl:Nn { cn }
-
-\cs_new:Npn \subfiglist_seq_set_from_tl:NN #1 #2
-%
-% #1: Sequence to be set
-% #2: Token list
-%
-{
-  \seq_clear:N #1
-  \tl_map_inline:Nn #2
-  {
-    \seq_put_right:Nn #1 { ##1 }
-  }
-}
-
 \cs_generate_variant:Nn \subfiglist_seq_set_from_tl:NN { cN }
 \cs_generate_variant:Nn \subfiglist_seq_set_from_tl:NN { Nc }
 
@@ -870,163 +863,163 @@
   \keys_define:nn { #1 }
   {
     % Tweak caption package for generation of labels?
-    tweak-caption-package.bool_set:N          = \subfiglist_tweak_caption_package_bool,
-    tweak-caption-package.default:n           = true,
+    tweak-caption-package.bool_set:N      = \subfiglist_tweak_caption_package_bool,
+    tweak-caption-package.default:n       = true,
     
     % Width of environment
-    environment-width.dim_set:N               = \subfiglist_env_width_document_default_dim,
-    environment-width.value_required:n        = true,
-    ew.meta:n                                 = { environment-width = ##1 },
-    ew.value_required:n                       = true,
+    environment-width.dim_set:N           = \subfiglist_env_width_document_default_dim,
+    environment-width.value_required:n    = true,
+    ew.meta:n                             = { environment-width = ##1 },
+    ew.value_required:n                   = true,
     
     % Use \hspace* to output space?
-    environment-use-hspace.bool_set:N        = \subfiglist_env_use_hspace_document_default_bool,
-    environment-use-hspace.default:n         = true,
-    euh.meta:n                               = { environment-use-hspace = ##1 },
-    euh.default:n                            = true,
+    environment-use-hspace.bool_set:N     = \subfiglist_env_use_hspace_document_default_bool,
+    environment-use-hspace.default:n      = true,
+    euh.meta:n                            = { environment-use-hspace = ##1 },
+    euh.default:n                         = true,
     
     % Space between canvases
-    canvas-space.dim_set:N                    = \subfiglist_canvas_space_document_default_dim,
-    canvas-space.value_required:n             = true,
-    cs.meta:n                                 = { canvas-space = ##1 },
-    cs.value_required:n                       = true,
+    canvas-space.dim_set:N                = \subfiglist_canvas_space_document_default_dim,
+    canvas-space.value_required:n         = true,
+    cs.meta:n                             = { canvas-space = ##1 },
+    cs.value_required:n                   = true,
     
     % Space above canvas
-    canvas-top.dim_set:N                     = \subfiglist_canvas_top_document_default_dim,
-    canvas-top.value_required:n              = true,
-    ct.meta:n                                = { canvas-top = ##1 },
-    ct.value_required:n                      = true,
+    canvas-top.dim_set:N                  = \subfiglist_canvas_top_document_default_dim,
+    canvas-top.value_required:n           = true,
+    ct.meta:n                             = { canvas-top = ##1 },
+    ct.value_required:n                   = true,
     
     % Space below canvas
-    canvas-bottom.dim_set:N                  = \subfiglist_canvas_bot_document_default_dim,
-    canvas-bottom.value_required:n           = true,
-    cb.meta:n                                = { canvas-bottom = ##1 },
-    cb.value_required:n                      = true,
+    canvas-bottom.dim_set:N               = \subfiglist_canvas_bot_document_default_dim,
+    canvas-bottom.value_required:n        = true,
+    cb.meta:n                             = { canvas-bottom = ##1 },
+    cb.value_required:n                   = true,
     
     % Space left of canvas
-    canvas-left.dim_set:N                    = \subfiglist_canvas_left_document_default_dim,
-    canvas-left.value_required:n             = true,
-    cl.meta:n                                = { canvas-left = ##1 },
-    cl.value_required:n                      = true,
+    canvas-left.dim_set:N                 = \subfiglist_canvas_left_document_default_dim,
+    canvas-left.value_required:n          = true,
+    cl.meta:n                             = { canvas-left = ##1 },
+    cl.value_required:n                   = true,
     
     % Space right of canvas
-    canvas-right.dim_set:N                   = \subfiglist_canvas_right_document_default_dim,
-    canvas-right.value_required:n            = true,
-    cr.meta:n                                = { canvas-right = ##1 },
-    cr.value_required:n                      = true,
+    canvas-right.dim_set:N                = \subfiglist_canvas_right_document_default_dim,
+    canvas-right.value_required:n         = true,
+    cr.meta:n                             = { canvas-right = ##1 },
+    cr.value_required:n                   = true,
     
     % Canvas margin
-    canvas-margin.meta:n                     = { canvas-top = ##1, 
-                                                 canvas-bottom = ##1, 
-                                                 canvas-left = ##1,
-                                                 canvas-right = ##1 },
-    canvas-margin.value_required:n           = true,
-    cm.meta:n                                = { canvas-margin = ##1 },
-    cm.value_required:n                      = true,
+    canvas-margin.meta:n                  = { canvas-top = ##1, 
+                                              canvas-bottom = ##1, 
+                                              canvas-left = ##1,
+                                              canvas-right = ##1 },
+    canvas-margin.value_required:n        = true,
+    cm.meta:n                             = { canvas-margin = ##1 },
+    cm.value_required:n                   = true,
     
     % Canvas frame color
-    canvas-frame-color.tl_set:N              = \subfiglist_canvas_frame_color_document_default_tl,
-    canvas-frame-color.value_required:n      = true,
-    canvas-frame-colour.meta:n               = { canvas-frame-color = ##1 },
-    canvas-frame-colour.value_required:n     = true,
-    cfc.meta:n                               = { canvas-frame-color = ##1 },
-    cfc.value_required:n                     = true,
+    canvas-frame-color.tl_set:N           = \subfiglist_canvas_frame_color_document_default_tl,
+    canvas-frame-color.value_required:n   = true,
+    canvas-frame-colour.meta:n            = { canvas-frame-color = ##1 },
+    canvas-frame-colour.value_required:n  = true,
+    cfc.meta:n                            = { canvas-frame-color = ##1 },
+    cfc.value_required:n                  = true,
     
     % Canvas frame border width
-    canvas-frame-width.dim_set:N             = \subfiglist_canvas_frame_width_document_default_dim,
-    canvas-frame-width.value_required:n      = true,
-    cfw.meta:n                               = { canvas-frame-width = ##1 },
-    cfw.value_required:n                     = true,
+    canvas-frame-width.dim_set:N          = \subfiglist_canvas_frame_width_document_default_dim,
+    canvas-frame-width.value_required:n   = true,
+    cfw.meta:n                            = { canvas-frame-width = ##1 },
+    cfw.value_required:n                  = true,
     
     % Canvas frame top separation
-    canvas-frame-top.dim_set:N               = \subfiglist_canvas_frame_top_document_default_dim,
-    canvas-frame-top.value_required:n        = true,
-    cft.meta:n                               = { canvas-frame-top = ##1 },
-    cft.value_required:n                     = true,
+    canvas-frame-top.dim_set:N            = \subfiglist_canvas_frame_top_document_default_dim,
+    canvas-frame-top.value_required:n     = true,
+    cft.meta:n                            = { canvas-frame-top = ##1 },
+    cft.value_required:n                  = true,
     
     % Canvas frame bottom separation
-    canvas-frame-bottom.dim_set:N            = \subfiglist_canvas_frame_bottom_document_default_dim,
-    canvas-frame-bottom.value_required:n     = true,
-    cfb.meta:n                               = { canvas-frame-bottom = ##1 },
-    cfb.value_required:n                     = true,
+    canvas-frame-bottom.dim_set:N         = \subfiglist_canvas_frame_bottom_document_default_dim,
+    canvas-frame-bottom.value_required:n  = true,
+    cfb.meta:n                            = { canvas-frame-bottom = ##1 },
+    cfb.value_required:n                  = true,
     
     % Canvas frame left separation
-    canvas-frame-left.dim_set:N              = \subfiglist_canvas_frame_left_document_default_dim,
-    canvas-frame-left.value_required:n       = true,
-    cfl.meta:n                               = { canvas-frame-left = ##1 },
-    cfl.value_required:n                     = true,
+    canvas-frame-left.dim_set:N           = \subfiglist_canvas_frame_left_document_default_dim,
+    canvas-frame-left.value_required:n    = true,
+    cfl.meta:n                            = { canvas-frame-left = ##1 },
+    cfl.value_required:n                  = true,
     
     % Canvas frame right separation
-    canvas-frame-right.dim_set:N             = \subfiglist_canvas_frame_right_document_default_dim,
-    canvas-frame-right.value_required:n      = true,
-    cfr.meta:n                               = { canvas-frame-right = ##1 },
-    cfr.value_required:n                     = true,
+    canvas-frame-right.dim_set:N          = \subfiglist_canvas_frame_right_document_default_dim,
+    canvas-frame-right.value_required:n   = true,
+    cfr.meta:n                            = { canvas-frame-right = ##1 },
+    cfr.value_required:n                  = true,
     
     % Canvas frame padding
-    canvas-frame-padding.meta:n              = { canvas-frame-top = ##1, 
-                                                 canvas-frame-bottom = ##1, 
-                                                 canvas-frame-left = ##1,
-                                                 canvas-frame-right = ##1 },
-    canvas-frame-padding.value_required:n    = true,
-    cfp.meta:n                               = { canvas-frame-padding = ##1 },
-    cfp.value_required:n                     = true,
+    canvas-frame-padding.meta:n           = { canvas-frame-top = ##1, 
+                                              canvas-frame-bottom = ##1, 
+                                              canvas-frame-left = ##1,
+                                              canvas-frame-right = ##1 },
+    canvas-frame-padding.value_required:n = true,
+    cfp.meta:n                            = { canvas-frame-padding = ##1 },
+    cfp.value_required:n                  = true,
     
     % Horizontal positioning of label (left, center, right)
     label-hpos.choice:,
-    label-hpos.choices:nn                    = { l, c, r }
+    label-hpos.choices:nn                 = { l, c, r }
     {
       \subfiglist_tl_set_eq_new:NN \subfiglist_label_hpos_document_default_tl \l_keys_choice_tl
     },
-    label-hpos.value_required:n              = true,
+    label-hpos.value_required:n           = true,
     lh.choice:,
-    lh.choices:nn                            = { l, c, r }
+    lh.choices:nn                         = { l, c, r }
     {
       \subfiglist_tl_set_eq_new:NN \subfiglist_label_hpos_document_default_tl \l_keys_choice_tl
     },
-    lh.value_required:n                      = true,
+    lh.value_required:n                   = true,
     
     % Vertical positioning of label (top, center, bottom)
     label-vpos.choice:,
-    label-vpos.choices:nn                    = { t, c, b }
+    label-vpos.choices:nn                 = { t, c, b }
     {
       \subfiglist_tl_set_eq_new:NN \subfiglist_label_vpos_document_default_tl \l_keys_choice_tl
     },
-    label-vpos.value_required:n              = true,
+    label-vpos.value_required:n           = true,
     lv.choice:,
-    lv.choices:nn                            = { t, c, b }
+    lv.choices:nn                         = { t, c, b }
     {
       \subfiglist_tl_set_eq_new:NN \subfiglist_label_vpos_document_default_tl \l_keys_choice_tl
     },
-    lv.value_required:n                      = true,
+    lv.value_required:n                   = true,
     
     % Horizontal shift of label
-    label-xshift.dim_set:N                   = \subfiglist_label_xshift_document_default_dim,
-    label-xshift.value_required:n            = true,
-    lx.meta:n                                = { label-xshift = ##1 },
-    lx.value_required:n                      = true,
+    label-xshift.dim_set:N                = \subfiglist_label_xshift_document_default_dim,
+    label-xshift.value_required:n         = true,
+    lx.meta:n                             = { label-xshift = ##1 },
+    lx.value_required:n                   = true,
     
     % Vertical shift of label
-    label-yshift.dim_set:N                   = \subfiglist_label_yshift_document_default_dim,
-    label-yshift.value_required:n            = true,
-    ly.meta:n                                = { label-yshift = ##1 },
-    ly.value_required:n                      = true,
+    label-yshift.dim_set:N                = \subfiglist_label_yshift_document_default_dim,
+    label-yshift.value_required:n         = true,
+    ly.meta:n                             = { label-yshift = ##1 },
+    ly.value_required:n                   = true,
     
     % Label color
-    label-color.tl_set:N                     = \subfiglist_label_color_document_default_tl,
-    label-color.value_required:n             = true,
-    label-colour.meta:n                      = { label-color = ##1 },
-    label-colour.value_required:n            = true,
-    lc.meta:n                                = { label-color = ##1 },
-    lc.value_required:n                      = true,
+    label-color.tl_set:N                  = \subfiglist_label_color_document_default_tl,
+    label-color.value_required:n          = true,
+    label-colour.meta:n                   = { label-color = ##1 },
+    label-colour.value_required:n         = true,
+    lc.meta:n                             = { label-color = ##1 },
+    lc.value_required:n                   = true,
     
     % Label background
-    label-background.tl_set:N                = \subfiglist_label_background_document_default_tl,
-    label-background.value_required:n        = true,
-    lb.meta:n                                = { label-background = ##1 },
-    lb.value_required:n                      = true,
+    label-background.tl_set:N             = \subfiglist_label_background_document_default_tl,
+    label-background.value_required:n     = true,
+    lb.meta:n                             = { label-background = ##1 },
+    lb.value_required:n                   = true,
     
     % Error catching
-    unknown.code:n                           =
+    unknown.code:n                        =
     {
       \msg_error:nnV { subfiglist } { option~unknown~ #1 } \l_keys_key_tl
     }
@@ -1132,159 +1125,159 @@
   \keys_define:nn { subfiglist-environment }
   {
     % Width of environment
-    environment-width.dim_set:N               = \subfiglist_env_width_dim,
-    environment-width.value_required:n        = true,
-    ew.meta:n                                 = { environment-width = #1 },
-    ew.value_required:n                       = true,
+    environment-width.dim_set:N           = \subfiglist_env_width_dim,
+    environment-width.value_required:n    = true,
+    ew.meta:n                             = { environment-width = #1 },
+    ew.value_required:n                   = true,
     
     % Use \hspace* to output space?
-    environment-use-hspace.bool_set:N        = \subfiglist_env_use_hspace_bool,
-    environment-use-hspace.default:n         = true,
-    euh.meta:n                               = { environment-use-hspace = #1 },
-    euh.default:n                            = true,
+    environment-use-hspace.bool_set:N     = \subfiglist_env_use_hspace_bool,
+    environment-use-hspace.default:n      = true,
+    euh.meta:n                            = { environment-use-hspace = #1 },
+    euh.default:n                         = true,
     
     % Space between canvases
-    canvas-space.dim_set:N                    = \subfiglist_canvas_space_environment_default_dim,
-    canvas-space.value_required:n             = true,
-    cs.meta:n                                 = { canvas-space = #1 },
-    cs.value_required:n                       = true,
+    canvas-space.dim_set:N                = \subfiglist_canvas_space_environment_default_dim,
+    canvas-space.value_required:n         = true,
+    cs.meta:n                             = { canvas-space = #1 },
+    cs.value_required:n                   = true,
     
     % Space above canvas
-    canvas-top.dim_set:N                     = \subfiglist_canvas_top_environment_default_dim,
-    canvas-top.value_required:n              = true,
-    ct.meta:n                                = { canvas-top = #1 },
-    ct.value_required:n                      = true,
+    canvas-top.dim_set:N                  = \subfiglist_canvas_top_environment_default_dim,
+    canvas-top.value_required:n           = true,
+    ct.meta:n                             = { canvas-top = #1 },
+    ct.value_required:n                   = true,
     
     % Space below canvas
-    canvas-bottom.dim_set:N                  = \subfiglist_canvas_bot_environment_default_dim,
-    canvas-bottom.value_required:n           = true,
-    cb.meta:n                                = { canvas-bottom = #1 },
-    cb.value_required:n                      = true,
+    canvas-bottom.dim_set:N               = \subfiglist_canvas_bot_environment_default_dim,
+    canvas-bottom.value_required:n        = true,
+    cb.meta:n                             = { canvas-bottom = #1 },
+    cb.value_required:n                   = true,
     
     % Space left of canvas
-    canvas-left.dim_set:N                    = \subfiglist_canvas_left_environment_default_dim,
-    canvas-left.value_required:n             = true,
-    cl.meta:n                                = { canvas-left = #1 },
-    cl.value_required:n                      = true,
+    canvas-left.dim_set:N                 = \subfiglist_canvas_left_environment_default_dim,
+    canvas-left.value_required:n          = true,
+    cl.meta:n                             = { canvas-left = #1 },
+    cl.value_required:n                   = true,
     
     % Space right of canvas
-    canvas-right.dim_set:N                   = \subfiglist_canvas_right_environment_default_dim,
-    canvas-right.value_required:n            = true,
-    cr.meta:n                                = { canvas-right = #1 },
-    cr.value_required:n                      = true,
+    canvas-right.dim_set:N                = \subfiglist_canvas_right_environment_default_dim,
+    canvas-right.value_required:n         = true,
+    cr.meta:n                             = { canvas-right = #1 },
+    cr.value_required:n                   = true,
     
     % Canvas margin
-    canvas-margin.meta:n                     = { canvas-top = #1, 
-                                                 canvas-bottom = #1, 
-                                                 canvas-left = #1,
-                                                 canvas-right = #1 },
-    canvas-margin.value_required:n           = true,
-    cm.meta:n                                = { canvas-margin = #1 },
-    cm.value_required:n                      = true,
+    canvas-margin.meta:n                  = { canvas-top = #1, 
+                                              canvas-bottom = #1, 
+                                              canvas-left = #1,
+                                              canvas-right = #1 },
+    canvas-margin.value_required:n        = true,
+    cm.meta:n                             = { canvas-margin = #1 },
+    cm.value_required:n                   = true,
     
     % Canvas frame color
-    canvas-frame-color.tl_set:N              = \subfiglist_canvas_frame_color_environment_default_tl,
-    canvas-frame-color.value_required:n      = true,
-    canvas-frame-colour.meta:n               = { canvas-frame-color = #1 },
-    canvas-frame-colour.value_required:n     = true,
-    cfc.meta:n                               = { canvas-frame-color = #1 },
-    cfc.value_required:n                     = true,
+    canvas-frame-color.tl_set:N           = \subfiglist_canvas_frame_color_environment_default_tl,
+    canvas-frame-color.value_required:n   = true,
+    canvas-frame-colour.meta:n            = { canvas-frame-color = #1 },
+    canvas-frame-colour.value_required:n  = true,
+    cfc.meta:n                            = { canvas-frame-color = #1 },
+    cfc.value_required:n                  = true,
     
     % Canvas frame border width
-    canvas-frame-width.dim_set:N             = \subfiglist_canvas_frame_width_environment_default_dim,
-    canvas-frame-width.value_required:n      = true,
-    cfw.meta:n                               = { canvas-frame-width = #1 },
-    cfw.value_required:n                     = true,
+    canvas-frame-width.dim_set:N          = \subfiglist_canvas_frame_width_environment_default_dim,
+    canvas-frame-width.value_required:n   = true,
+    cfw.meta:n                            = { canvas-frame-width = #1 },
+    cfw.value_required:n                  = true,
     
     % Canvas frame top separation
-    canvas-frame-top.dim_set:N               = \subfiglist_canvas_frame_top_environment_default_dim,
-    canvas-frame-top.value_required:n        = true,
-    cft.meta:n                               = { canvas-frame-top = #1 },
-    cft.value_required:n                     = true,
+    canvas-frame-top.dim_set:N            = \subfiglist_canvas_frame_top_environment_default_dim,
+    canvas-frame-top.value_required:n     = true,
+    cft.meta:n                            = { canvas-frame-top = #1 },
+    cft.value_required:n                  = true,
     
     % Canvas frame bottom separation
-    canvas-frame-bottom.dim_set:N            = \subfiglist_canvas_frame_bottom_environment_default_dim,
-    canvas-frame-bottom.value_required:n     = true,
-    cfb.meta:n                               = { canvas-frame-bottom = #1 },
-    cfb.value_required:n                     = true,
+    canvas-frame-bottom.dim_set:N         = \subfiglist_canvas_frame_bottom_environment_default_dim,
+    canvas-frame-bottom.value_required:n  = true,
+    cfb.meta:n                            = { canvas-frame-bottom = #1 },
+    cfb.value_required:n                  = true,
     
     % Canvas frame left separation
-    canvas-frame-left.dim_set:N              = \subfiglist_canvas_frame_left_environment_default_dim,
-    canvas-frame-left.value_required:n       = true,
-    cfl.meta:n                               = { canvas-frame-left = #1 },
-    cfl.value_required:n                     = true,
+    canvas-frame-left.dim_set:N           = \subfiglist_canvas_frame_left_environment_default_dim,
+    canvas-frame-left.value_required:n    = true,
+    cfl.meta:n                            = { canvas-frame-left = #1 },
+    cfl.value_required:n                  = true,
     
     % Canvas frame right separation
-    canvas-frame-right.dim_set:N             = \subfiglist_canvas_frame_right_environment_default_dim,
-    canvas-frame-right.value_required:n      = true,
-    cfr.meta:n                               = { canvas-frame-right = #1 },
-    cfr.value_required:n                     = true,
+    canvas-frame-right.dim_set:N          = \subfiglist_canvas_frame_right_environment_default_dim,
+    canvas-frame-right.value_required:n   = true,
+    cfr.meta:n                            = { canvas-frame-right = #1 },
+    cfr.value_required:n                  = true,
     
     % Canvas frame padding
-    canvas-frame-padding.meta:n              = { canvas-frame-top = #1, 
-                                                 canvas-frame-bottom = #1, 
-                                                 canvas-frame-left = #1,
-                                                 canvas-frame-right = #1 },
-    canvas-frame-padding.value_required:n    = true,
-    cfp.meta:n                               = { canvas-frame-padding = #1 },
-    cfp.value_required:n                     = true,
+    canvas-frame-padding.meta:n           = { canvas-frame-top = #1, 
+                                              canvas-frame-bottom = #1, 
+                                              canvas-frame-left = #1,
+                                              canvas-frame-right = #1 },
+    canvas-frame-padding.value_required:n = true,
+    cfp.meta:n                            = { canvas-frame-padding = #1 },
+    cfp.value_required:n                  = true,
     
     % Horizontal positioning of label (left, center, right)
     label-hpos.choice:,
-    label-hpos.choices:nn                    = { l, c, r }
+    label-hpos.choices:nn                 = { l, c, r }
     {
       \subfiglist_tl_set_eq_new:NN \subfiglist_label_hpos_environment_default_tl \l_keys_choice_tl
     },
-    label-hpos.value_required:n              = true,
+    label-hpos.value_required:n           = true,
     lh.choice:,
-    lh.choices:nn                            = { l, c, r }
+    lh.choices:nn                         = { l, c, r }
     {
       \subfiglist_tl_set_eq_new:NN \subfiglist_label_hpos_environment_default_tl \l_keys_choice_tl
     },
-    lh.value_required:n                      = true,
+    lh.value_required:n                   = true,
     
     % Vertical positioning of label (top, center, bottom)
     label-vpos.choice:,
-    label-vpos.choices:nn                    = { t, c, b }
+    label-vpos.choices:nn                 = { t, c, b }
     {
       \subfiglist_tl_set_eq_new:NN \subfiglist_label_vpos_environment_default_tl \l_keys_choice_tl
     },
-    label-vpos.value_required:n              = true,
+    label-vpos.value_required:n           = true,
     lv.choice:,
-    lv.choices:nn                            = { t, c, b }
+    lv.choices:nn                         = { t, c, b }
     {
       \subfiglist_tl_set_eq_new:NN \subfiglist_label_vpos_environment_default_tl \l_keys_choice_tl
     },
-    lv.value_required:n                      = true,
+    lv.value_required:n                   = true,
     
     % Horizontal shift of label
-    label-xshift.dim_set:N                   = \subfiglist_label_xshift_environment_default_dim,
-    label-xshift.value_required:n            = true,
-    lx.meta:n                                = { label-xshift = #1 },
-    lx.value_required:n                      = true,
+    label-xshift.dim_set:N                = \subfiglist_label_xshift_environment_default_dim,
+    label-xshift.value_required:n         = true,
+    lx.meta:n                             = { label-xshift = #1 },
+    lx.value_required:n                   = true,
     
     % Vertical shift of label
-    label-yshift.dim_set:N                   = \subfiglist_label_yshift_environment_default_dim,
-    label-yshift.value_required:n            = true,
-    ly.meta:n                                = { label-yshift = #1 },
-    ly.value_required:n                      = true,
+    label-yshift.dim_set:N                = \subfiglist_label_yshift_environment_default_dim,
+    label-yshift.value_required:n         = true,
+    ly.meta:n                             = { label-yshift = #1 },
+    ly.value_required:n                   = true,
     
     % Label color
-    label-color.tl_set:N                     = \subfiglist_label_color_environment_default_tl,
-    label-color.value_required:n             = true,
-    label-colour.meta:n                      = { label-color = #1 },
-    label-colour.value_required:n            = true,
-    lc.meta:n                                = { label-color = #1 },
-    lc.value_required:n                      = true,
+    label-color.tl_set:N                  = \subfiglist_label_color_environment_default_tl,
+    label-color.value_required:n          = true,
+    label-colour.meta:n                   = { label-color = #1 },
+    label-colour.value_required:n         = true,
+    lc.meta:n                             = { label-color = #1 },
+    lc.value_required:n                   = true,
     
     % Label background
-    label-background.tl_set:N                = \subfiglist_label_background_environment_default_tl,
-    label-background.value_required:n        = true,
-    lb.meta:n                                = { label-background = #1 },
-    lb.value_required:n                      = true,
+    label-background.tl_set:N             = \subfiglist_label_background_environment_default_tl,
+    label-background.value_required:n     = true,
+    lb.meta:n                             = { label-background = #1 },
+    lb.value_required:n                   = true,
     
     % Error catching
-    unknown.code:n         =
+    unknown.code:n                        =
     {
       \msg_error:nnVn { subfiglist } { option~unknown }
         \l_keys_key_tl { environment~subfiglist }
@@ -1297,87 +1290,87 @@
     \keys_define:nn { #1 }
     {
       % Space above canvas
-      top.dim_set:N                     = \subfiglist_canvas_top_dim,
-      top.value_required:n              = true,
-      t.meta:n                          = { top = ##1 },
-      t.value_required:n                = true,
+      top.dim_set:N                   = \subfiglist_canvas_top_dim,
+      top.value_required:n            = true,
+      t.meta:n                        = { top = ##1 },
+      t.value_required:n              = true,
 
       % Space below canvas
-      bottom.dim_set:N                  = \subfiglist_canvas_bot_dim,
-      bottom.value_required:n           = true,
-      b.meta:n                          = { bottom = ##1 },
-      b.value_required:n                = true,
+      bottom.dim_set:N                = \subfiglist_canvas_bot_dim,
+      bottom.value_required:n         = true,
+      b.meta:n                        = { bottom = ##1 },
+      b.value_required:n              = true,
 
       % Space left of canvas
-      left.dim_set:N                    = \subfiglist_canvas_left_dim,
-      left.value_required:n             = true,
-      l.meta:n                          = { left = ##1 },
-      l.value_required:n                = true,
+      left.dim_set:N                  = \subfiglist_canvas_left_dim,
+      left.value_required:n           = true,
+      l.meta:n                        = { left = ##1 },
+      l.value_required:n              = true,
 
       % Space right of canvas
-      right.dim_set:N                   = \subfiglist_canvas_right_dim,
-      right.value_required:n            = true,
-      r.meta:n                          = { right = ##1 },
-      r.value_required:n                = true,
+      right.dim_set:N                 = \subfiglist_canvas_right_dim,
+      right.value_required:n          = true,
+      r.meta:n                        = { right = ##1 },
+      r.value_required:n              = true,
 
       % Canvas margin
-      margin.meta:n                     = { top = #1, 
-                                            bottom = #1, 
-                                            left = #1,
-                                            right = #1 },
-      margin.value_required:n           = true,
-      m.meta:n                          = { margin = #1 },
-      m.value_required:n                = true,
+      margin.meta:n                   = { top = #1, 
+                                          bottom = #1, 
+                                          left = #1,
+                                          right = #1 },
+      margin.value_required:n         = true,
+      m.meta:n                        = { margin = #1 },
+      m.value_required:n              = true,
     
       % Frame color
-      frame-color.tl_set:N              = \subfiglist_canvas_frame_color_tl,
-      frame-color.value_required:n      = true,
-      frame-colour.meta:n               = { frame-color = ##1 },
-      frame-colour.value_required:n     = true,
-      fc.meta:n                         = { frame-color = ##1 },
-      fc.value_required:n               = true,
+      frame-color.tl_set:N            = \subfiglist_canvas_frame_color_tl,
+      frame-color.value_required:n    = true,
+      frame-colour.meta:n             = { frame-color = ##1 },
+      frame-colour.value_required:n   = true,
+      fc.meta:n                       = { frame-color = ##1 },
+      fc.value_required:n             = true,
 
       % Frame width
-      frame-width.dim_set:N             = \subfiglist_canvas_frame_width_dim,
-      frame-width.value_required:n      = true,
-      fw.meta:n                         = { frame-width = ##1 },
-      fw.value_required:n               = true,
+      frame-width.dim_set:N           = \subfiglist_canvas_frame_width_dim,
+      frame-width.value_required:n    = true,
+      fw.meta:n                       = { frame-width = ##1 },
+      fw.value_required:n             = true,
 
       % Frame top separation
-      frame-top.dim_set:N               = \subfiglist_canvas_frame_top_dim,
-      frame-top.value_required:n        = true,
-      ft.meta:n                         = { frame-top = ##1 },
-      ft.value_required:n               = true,
+      frame-top.dim_set:N             = \subfiglist_canvas_frame_top_dim,
+      frame-top.value_required:n      = true,
+      ft.meta:n                       = { frame-top = ##1 },
+      ft.value_required:n             = true,
 
       % Frame bottom separation
-      frame-bottom.dim_set:N            = \subfiglist_canvas_frame_bottom_dim,
-      frame-bottom.value_required:n     = true,
-      fb.meta:n                         = { frame-bottom = ##1 },
-      fb.value_required:n               = true,
+      frame-bottom.dim_set:N          = \subfiglist_canvas_frame_bottom_dim,
+      frame-bottom.value_required:n   = true,
+      fb.meta:n                       = { frame-bottom = ##1 },
+      fb.value_required:n             = true,
 
       % Frame left separation
-      frame-left.dim_set:N              = \subfiglist_canvas_frame_left_dim,
-      frame-left.value_required:n       = true,
-      fl.meta:n                         = { frame-left = ##1 },
-      fl.value_required:n               = true,
+      frame-left.dim_set:N            = \subfiglist_canvas_frame_left_dim,
+      frame-left.value_required:n     = true,
+      fl.meta:n                       = { frame-left = ##1 },
+      fl.value_required:n             = true,
 
       % Frame right separation
-      frame-right.dim_set:N             = \subfiglist_canvas_frame_right_dim,
-      frame-right.value_required:n      = true,
-      fr.meta:n                         = { frame-right = ##1 },
-      fr.value_required:n               = true,
+      frame-right.dim_set:N           = \subfiglist_canvas_frame_right_dim,
+      frame-right.value_required:n    = true,
+      fr.meta:n                       = { frame-right = ##1 },
+      fr.value_required:n             = true,
 
       % Canvas frame separation
-      frame-padding.meta:n              = { frame-top = ##1,
-                                            frame-bottom = ##1, 
-                                            frame-left = ##1,
-                                            frame-right = ##1 },
-      frame-padding.value_required:n    = true,
-      fp.meta:n                         = { frame-padding = ##1 },
-      fp.value_required:n               = true,
+      frame-padding.meta:n            = { frame-top = ##1,
+                                          frame-bottom = ##1, 
+                                          frame-left = ##1,
+                                          frame-right = ##1 },
+      frame-padding.value_required:n  = true,
+      fp.meta:n                       = { frame-padding = ##1 },
+      fp.value_required:n             = true,
 
       % Error catching
-      unknown.code:n                    =
+      unknown.code:n                  =
       {
         \msg_error:nnVx { subfiglist } { option~unknown }
           \l_keys_key_tl { command~\token_to_str:c { #1 } }
