--- a/subfiglist.sty
+++ b/subfiglist.sty
@@ -110,6 +110,7 @@
 \cs_generate_variant:Nn \tl_if_blank_p:n           { V }
 \cs_generate_variant:Nn \tl_if_empty:nT            { v }
 \cs_generate_variant:Nn \tl_if_in:nnTF             { nx }
+\cs_generate_variant:Nn \tl_if_in:NnTF             { Nx }
 \cs_generate_variant:Nn \msg_error:nnn             { nnf }
 \cs_generate_variant:Nn \msg_error:nnnnn           { nnnfn }
 \cs_generate_variant:Nn \msg_error:nnnnn           { nnnfV }
@@ -120,6 +121,7 @@
 \cs_generate_variant:Nn \str_if_eq_p:nn            { nf }
 \cs_generate_variant:Nn \char_generate:nn          { nV }
 \cs_generate_variant:Nn \seq_set_split:Nnn         { Nx }
+\cs_generate_variant:Nn \seq_set_split:Nnn         { NxV }
 \cs_generate_variant:Nn \seq_gset_split:Nnn        { cxx }
 \cs_generate_variant:Nn \group_insert_after:N      { c }
 \cs_generate_variant:Nn \hbox_set:Nn               { NV }
@@ -1826,9 +1828,9 @@
 % #3: Sequence containing specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl   #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
-  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq        #3
   \subfiglist_group_begin:
   
     \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
@@ -1852,9 +1854,9 @@
 % #3: Sequence containing specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl   #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
-  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq        #3
   \subfiglist_group_begin:
   
     \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
@@ -1869,7 +1871,7 @@
   
   \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
   \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
-  \subfiglist_group_return_tl_set_eq:NN #1   \subfiglist_tokenized_spec_tl
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
   \subfiglist_group_end:
@@ -1882,9 +1884,9 @@
 % #3: Sequence containing specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl   #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
-  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq        #3
   \subfiglist_group_begin:
   
     % Consume newline character
@@ -1926,7 +1928,7 @@
   
   \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
   \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
-  \subfiglist_group_return_tl_set_eq:NN #1   \subfiglist_tokenized_spec_tl
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
   \subfiglist_group_end:
@@ -1939,9 +1941,9 @@
 % #3: Sequence containing specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl   #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
-  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq        #3
   \subfiglist_group_begin:
   
     \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
@@ -1965,7 +1967,7 @@
     
   \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
   \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
-  \subfiglist_group_return_tl_set_eq:NN #1   \subfiglist_tokenized_spec_tl
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
   \subfiglist_group_end:
@@ -1978,9 +1980,9 @@
 % #3: Sequence containing specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl   #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
-  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq        #3
   \subfiglist_group_begin:
   
     \seq_pop_left:NN \subfiglist_spec_str_seq \subfiglist_tmpa_tl
@@ -1988,7 +1990,7 @@
 
   \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
   \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
-  \subfiglist_group_return_tl_set_eq:NN #1   \subfiglist_tokenized_spec_tl
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
   \subfiglist_group_end:
@@ -2002,9 +2004,9 @@
 % #3: Sequence containing specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_tokenized_spec_tl   #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq #2
-  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq #3
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_spec_str_seq        #3
   \subfiglist_group_begin:
   
     \bool_until_do:nn { \seq_if_empty_p:N \subfiglist_spec_str_seq }
@@ -2027,7 +2029,7 @@
 
   \subfiglist_tl_set_from_seq:NN \subfiglist_tmpa_tl \subfiglist_identifier_nums_seq
   \subfiglist_tl_set_from_seq:NN \subfiglist_tmpb_tl \subfiglist_spec_str_seq
-  \subfiglist_group_return_tl_set_eq:NN #1   \subfiglist_tokenized_spec_tl
+  \subfiglist_group_return_tl_set_eq:NN   #1 \subfiglist_tokenized_spec_tl
   \subfiglist_group_return_seq_from_tl:NN #2 \subfiglist_tmpa_tl
   \subfiglist_group_return_seq_from_tl:NN #3 \subfiglist_tmpb_tl
   \subfiglist_group_end:
@@ -2098,7 +2100,7 @@
 % #2: Sequence containing tokenized specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl     #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
   \subfiglist_group_begin:
 
@@ -2130,7 +2132,7 @@
 % #2: Sequence containing tokenized specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl     #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
   \subfiglist_group_begin:
 
@@ -2150,7 +2152,7 @@
 % #2: Sequence containing tokenized specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl     #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
   \subfiglist_group_begin:
 
@@ -2170,7 +2172,7 @@
 % #2: Sequence containing specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl     #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
   \subfiglist_group_begin:
 
@@ -2215,7 +2217,7 @@
 % #2: Sequence containing tokenized specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl     #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
   \subfiglist_group_begin:
   
@@ -2261,7 +2263,7 @@
 
 \cs_new:Npn \subfiglist_parse_error:NN #1 #2
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl     #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
   \subfiglist_group_begin:
 
@@ -2284,7 +2286,7 @@
 % #2: Sequence containing tokenized specification string
 %
 {
-  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl #1
+  \subfiglist_group_local_tl_set_eq:NN  \subfiglist_parsed_spec_tl     #1
   \subfiglist_group_local_seq_set_eq:NN \subfiglist_tokenized_spec_seq #2
   \subfiglist_group_begin:
 
@@ -2385,11 +2387,10 @@
 % #3: Total number of identifiers
 %
 {
-  \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq  #1
-  \subfiglist_group_local_seq_set_eq:NN \subfiglist_canvas_nums_seq      #2
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq    #1
+  \subfiglist_group_local_seq_set_eq:NN \subfiglist_canvas_nums_seq        #2
+  \subfiglist_group_local_int_set:Nn    \subfiglist_identifier_count_int { #3 }
   \subfiglist_group_begin:
-    \int_zero_new:N  \subfiglist_identifier_count_int
-    \int_set:Nn      \subfiglist_identifier_count_int { #3 }
     \seq_clear_new:N \subifglist_canvas_nums_sorted_seq
     
     % Sort detected image numbers
@@ -2478,11 +2479,10 @@
   % #3: Total number of identifiers
   %
   {
-    \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq ##1
-    \subfiglist_group_local_seq_set_eq:cN { subfiglist_ #1 _nums_seq }    ##2
+    \subfiglist_group_local_seq_set_eq:NN \subfiglist_identifier_nums_seq    ##1
+    \subfiglist_group_local_seq_set_eq:cN { subfiglist_ #1 _nums_seq }       ##2
+    \subfiglist_group_local_int_set:Nn    \subfiglist_identifier_count_int { ##3 }
     \subfiglist_group_begin:
-      \int_zero_new:N  \subfiglist_identifier_count_int
-      \int_set:Nn      \subfiglist_identifier_count_int { ##3 }
       \seq_clear_new:c { subfiglist_ #1 _nums_sorted_seq }
       
       % Sort detected label/overlay numbers
@@ -2593,27 +2593,31 @@
 % #3: Image width
 %
 {
+  \subfiglist_group_local_tl_set:Nn \subfiglist_file_path_tl    { #2 }
+  \subfiglist_group_local_tl_set:Nn \subfiglist_canvas_width_tl { #3 }
   \subfiglist_group_begin:
     % Set width of SVG image
-    \str_if_eq:nnF { #3 } { ! }
-      { \cs_gset:Npn \svgwidth { #3 } }
+    \str_if_eq:VnF \subfiglist_canvas_width_tl { ! }
+      { \exp_args:NNV \cs_gset:Npn \svgwidth \subfiglist_canvas_width_tl }
       
     \hbox_gset:Nn #1
     {
       \begin{subfiglistsvgenv}
         \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
-        \tl_if_in:nxTF { #2 } { \char_generate:nV { `/ } \subfiglist_tmp_int }
+        \tl_if_in:NxTF \subfiglist_file_path_tl { \char_generate:nV { `/ } \subfiglist_tmp_int }
         {
-          \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #2 }
+          \seq_set_split:NxV \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } \subfiglist_file_path_tl
           \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
           \import { \seq_use:Nn \subfiglist_tmp_seq { / } / }{ \tl_use:N \subfiglist_tmpa_tl }
         }{
-          \input { #2 }
+          \input { \subfiglist_file_path_tl }
         }
       \end{subfiglistsvgenv}
     }
   \subfiglist_group_end:
 }
+
+\cs_generate_variant:Nn \subfiglist_load_svg:Nnn { NVV }
 
 % Command for loading a TeX image
 \cs_new:Npn \subfiglist_load_tex:Nnn #1 #2 #3
@@ -2623,24 +2627,33 @@
 % #3: Image width
 %
 {
+  \subfiglist_group_local_tl_set:Nn \subfiglist_file_path_tl    { #2 }
+  \subfiglist_group_local_tl_set:Nn \subfiglist_canvas_width_tl { #3 }
   \subfiglist_group_begin:
     % Has natural width been requested?
-    \str_if_eq:nnTF { ! } { #3 }
+    \str_if_eq:VnTF \subfiglist_canvas_width_tl { ! }
     {
       \hbox_gset:Nn #1
       {
-        \subfiglist_load_tex_make_env:n { #2 }
+        \subfiglist_load_tex_make_env:V \subfiglist_file_path_tl
       }
     }{
       \hbox_set:Nn \subfiglist_tmp_box
       {
-        \subfiglist_load_tex_make_env:n { #2 }
+        \subfiglist_load_tex_make_env:V \subfiglist_file_path_tl
       }
       \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N \subfiglist_tmp_box }
-      \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N \subfiglist_tmp_box } }
+      \hbox_gset:Nn #1
+      {
+        \scalebox
+          { \fp_eval:n { \subfiglist_canvas_width_tl / \subfiglist_tmpa_dim } }
+          { \box_use:N \subfiglist_tmp_box }
+      }
     }
   \subfiglist_group_end:
 }
+
+\cs_generate_variant:Nn \subfiglist_load_tex:Nnn { NVV }
 
 % Environment for loading a TeX image
 \cs_new:Npn \subfiglist_load_tex_make_env:n #1
@@ -2648,20 +2661,23 @@
 % #1: File path
 %
 {
+  \subfiglist_group_local_tl_set:Nn \subfiglist_file_path_tl { #1 }
   \subfiglist_group_begin:
     \begin{subfiglisttexenv}
     \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
-    \tl_if_in:nxTF { #1 } { \char_generate:nV { `/ } \subfiglist_tmp_int }
+    \tl_if_in:NxTF \subfiglist_file_path_tl { \char_generate:nV { `/ } \subfiglist_tmp_int }
       {
-        \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #1 }
+        \seq_set_split:NxV \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } \subfiglist_file_path_tl
         \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
         \import { \seq_use:Nn \subfiglist_tmp_seq { / } / }{ \tl_use:N \subfiglist_tmpa_tl }
       }{
-        \input { #1 }
+        \input { \subfiglist_file_path_tl }
       }
     \end{subfiglisttexenv}
   \subfiglisg_group_end:
 }
+
+\cs_generate_variant:Nn \subfiglist_load_tex_make_env:n { V }
 
 % Command for loading a bitmap image.
 \cs_new:Npn \subfiglist_load_img:Nnn #1 #2 #3
@@ -2671,23 +2687,32 @@
 % #3: Image width
 %
 {
+  \subfiglist_group_local_tl_set:Nn \subfiglist_file_path_tl    { #2 }
+  \subfiglist_group_local_tl_set:Nn \subfiglist_canvas_width_tl { #3 }
   \subfiglist_group_begin:
     % Has natural width been requested?
-    \str_if_eq:nnTF { ! } { #3 }
+    \str_if_eq:VnTF \subfiglist_canvas_width_tl { ! }
     {
       % Load with natural width
-      \hbox_gset:Nn #1 { \includegraphics { #2 } }
+      \hbox_gset:Nn #1 { \includegraphics { \subfiglist_file_path_tl } }
     }{
       % Load with natural width and scale to desired width.
       % This is a workaround to an apparent bug of \includegraphics,
       % which slightly changes the aspect ratio of an image that
       % is loaded with a specific width.
-      \hbox_set:Nn \subfiglist_tmp_box { \includegraphics { #2 } }
+      \hbox_set:Nn \subfiglist_tmp_box { \includegraphics { \subfiglist_file_path_tl } }
       \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N \subfiglist_tmp_box }
-      \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N \subfiglist_tmp_box } }
+      \hbox_gset:Nn #1
+      {
+        \scalebox
+          { \fp_eval:n { \subfiglist_canvas_width_tl / \subfiglist_tmpa_dim } }
+          { \box_use:N \subfiglist_tmp_box }
+      }
     }
   \subfiglist_group_end:
 }
+
+\cs_generate_variant:Nn \subfiglist_load_img:Nnn { NVV }
 
 %Command for loading an SVG or bitmap image
 \cs_new:Npn \subfiglist_load:Nnn #1 #2 #3
@@ -2697,28 +2722,30 @@
 % #3: Image width
 %
 {
+  \subfiglist_group_local_tl_set:Nn \subfiglist_file_path_tl    { #2 }
+  \subfiglist_group_local_tl_set:Nn \subfiglist_canvas_width_tl { #3 }
   \subfiglist_group_begin:
     % Strip off path
     \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
-    \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #2 }
+    \seq_set_split:NxV \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } \subfiglist_file_path_tl
     \seq_get_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
     % Determine file extension.
     \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `. } }
-    \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `. } \subfiglist_tmp_int } { #2 }
+    \seq_set_split:NxV \subfiglist_tmp_seq { \char_generate:nV { `. } \subfiglist_tmp_int } \subfiglist_file_path_tl
     \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
     % Set command to load images depending on file extension.
     \seq_if_empty:NTF \subfiglist_tmp_seq
     {
       % There is no file extension, only the file name.
       % Assume bitmap image in this case.
-      \subfiglist_load_img:Nnn #1 { #2 } { #3 }
+      \subfiglist_load_img:NVV #1 \subfiglist_file_path_tl \subfiglist_canvas_width_tl
     }{
       % Distinguish between file extensions
       \tl_map_inline:nn { { svg } { tex } { img } }
       {
         \bool_if:nT { \subfiglist_use:c { subfiglist_load_is_ ##1 _p:V } \subfiglist_tmpa_tl }
         {
-          \subfiglist_use:c { subfiglist_load_ ##1 :Nnn } #1 { #2 } { #3 }
+          \subfiglist_use:c { subfiglist_load_ ##1 :NVV } #1 \subfiglist_file_path_tl \subfiglist_canvas_width_tl
           \tl_map_break:
         }
       }
@@ -2742,14 +2769,16 @@
 % #3: Image width
 %
 {
+  \subfiglist_group_local_tl_set:Nn \subfiglist_file_path_tl    { #2 }
+  \subfiglist_group_local_tl_set:Nn \subfiglist_canvas_width_tl { #3 }
   \subfiglist_group_begin:
     % Strip off path
     \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `/ } }
-    \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } { #2 }
+    \seq_set_split:NxV \subfiglist_tmp_seq { \char_generate:nV { `/ } \subfiglist_tmp_int } \subfiglist_file_path_tl
     \seq_get_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
     % Determine file extension.
     \int_set:Nn \subfiglist_tmp_int { \char_value_catcode:n { `. } }
-    \seq_set_split:Nxn \subfiglist_tmp_seq { \char_generate:nV { `. } \subfiglist_tmp_int } { #2 }
+    \seq_set_split:NxV \subfiglist_tmp_seq { \char_generate:nV { `. } \subfiglist_tmp_int } \subfiglist_file_path_tl
     \seq_pop_right:NN \subfiglist_tmp_seq \subfiglist_tmpa_tl
     % Set command to load images depending on file extension.
     \seq_if_empty:NTF \subfiglist_tmp_seq
@@ -2757,16 +2786,26 @@
       % There is no file extension, only the file name.
       % Assume bitmap image in this case.
       \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N #1 }
-      \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N #1 } }
+      \hbox_gset:Nn #1
+      {
+        \scalebox
+          { \fp_eval:n { \subfiglist_canvas_width_tl / \subfiglist_tmpa_dim } }
+          { \box_use:N #1 }
+      }
     }{
       \bool_lazy_or:nnTF
       { \subfiglist_load_is_svg_p:V \subfiglist_tmpa_tl }
       { \subfiglist_load_is_tex_p:V \subfiglist_tmpa_tl }
       {
-        \subfiglist_load_svg:Nnn #1 { #2 } { #3 }
+        \subfiglist_load_svg:NVV #1 \subfiglist_file_path_tl \subfiglist_canvas_width_tl
       }{
         \dim_set:Nn \subfiglist_tmpa_dim { \box_wd:N #1 }
-        \hbox_gset:Nn #1 { \scalebox { \fp_eval:n { #3 / \subfiglist_tmpa_dim } } { \box_use:N #1 } }
+        \hbox_gset:Nn #1
+        {
+          \scalebox
+            { \fp_eval:n { \subfiglist_canvas_width_tl / \subfiglist_tmpa_dim } }
+            { \box_use:N #1 }
+        }
       }
     }
   \subfiglist_group_end:
